UDCunit GetUserDefinedCoilIndexTest + unfinished UserCoilComponentStructReport

--- a/tst/EnergyPlus/unit/CMakeLists.txt
+++ b/tst/EnergyPlus/unit/CMakeLists.txt
@@ -225,6 +225,7 @@ set(test_src
     UnitHeater.unit.cc
     UnitVentilator.unit.cc
     UtilityRoutines.unit.cc
+    UserDefinedComponents.unit.cc
     VariableSpeedCoils.unit.cc
     VAVDefMinMaxFlow.unit.cc
     Vectors.unit.cc
